# dtu_mlops_quanhoang

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirement_quanhoang.txt  requirements.txt  tasks.py  trainer.dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.github/: linkcheck_config.json  markdownlint.json
pages/: faq.md  overview.md  projects.md  timeplan.md
quanhoang_repo/: Makefile  README.md  pyproject.toml
quanhoang_repo/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
quanhoang_repo/docs/: mkdocs.yaml
quanhoang_repo/docs/source/: index.md
quanhoang_repo/quanhoang_project/: __init__.py
quanhoang_repo/quanhoang_project/data/: make_dataset.py
quanhoang_repo/quanhoang_project/models/: model.py  train_model.py
quanhoang_repo/quanhoang_project/visualizations/: visualize.py
reports/: README.md
s10_extra/: README.md  calibration.md  design.md  documentation.md  frontend.md  high_performance_clusters.md  hyperparameters.md  infrastructure_as_code.md  kubernetes.md  ml_deployment.md  orchestration.md
s1_development_environment/: README.md  command_line.md  deep_learning_software.md  editor.md  package_manager.md
s2_organisation_and_version_control/: README.md  cli.md  code_structure.md  dvc.md  git.md  good_coding_practice.md
s3_reproducibility/: README.md  config_files.md  docker.md
s4_debugging_and_logging/: README.md  boilerplate.md  debugging.md  logging.md  profiling.md
s5_continuous_integration/: README.md  cml.md  github_actions.md  pre_commit.md  unittesting.md
(+126 files in other folders)
